# AEMM

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  PROJECT_CONTEXT.md  README.md  TASKS.md  THIRD_PARTY_NOTICES.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0001_initial_schema.sql  0002_mod_scanning.sql  0003_deployment_state.sql  0004_mod_removal_state.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: app_commands.rs  conflict_commands.rs  efmi_commands.rs  game_commands.rs  mod.rs  mod_commands.rs  profile_commands.rs  settings_commands.rs
src-tauri/src/core/: mod.rs
src-tauri/src/core/conflicts/: efmi_ini.rs  mod.rs  path_analyzer.rs
src-tauri/src/core/deployment/: efmi_copy.rs  efmi_direct.rs  mod.rs
src-tauri/src/core/game/: efmi.rs  endfield.rs  mod.rs
src-tauri/src/core/mods/: archive.rs  installer.rs  metadata.rs  (+5 more)
src-tauri/src/database/: conflict_store.rs  connection.rs  deployment_store.rs  mod.rs  mod_store.rs  profile_store.rs
src-tauri/src/errors/: app_error.rs  command_error.rs  mod.rs
src-tauri/src/models/: app.rs  conflict.rs  deployment.rs  game.rs  installed_mod.rs  mod.rs  mod_install.rs  mod_scan.rs  profile.rs
src-tauri/src/services/: app_paths.rs  app_services.rs  conflicts.rs  deployment.rs  game.rs  logging.rs  mod.rs  mods.rs  profiles.rs  settings.rs
src-tauri/src/utils/: mod.rs  path_safety.rs
src-tauri/tests/: efmi_package_compatibility.rs
(+36 files in other folders)
