[package]
name = "aemm"
version = "0.1.0"
description = "A safe, extensible mod manager for Arknights: Endfield"
authors = ["AEMM contributors"]
edition = "2024"
rust-version = "1.85"
publish = false
repository = "https://github.com/loyal37/AEMM"

[lib]
name = "aemm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros"] }
tauri = { version = "2.11.5", features = [] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-opener = "2.5.4"
tempfile = "3.24.0"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["fs", "sync"] }
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
uuid = { version = "1.21.0", features = ["serde", "v4"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.56.0"

[dev-dependencies]
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
